-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 RC
-
None
-
f906b6f0e (dev), 93e891d25 (6.6), 64e603a52 (6.6.0)
- duplicates
-
QTBUG-117690 DocumentViewer example does not compile
-
- Closed
-
| For Gerrit Dashboard: QTBUG-117691 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 508463,3 | Documentviewer Demo: fix plugin search on Windows | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
| 508637,2 | Documentviewer Demo: fix plugin search on Windows | 6.6 | qt/qtdoc | Status: MERGED | +2 | 0 |
| 508797,2 | Documentviewer Demo: fix plugin search on Windows | 6.6.0 | qt/qtdoc | Status: MERGED | +2 | 0 |