Documentviewer Demo: fix plugin search on Windows

The plugin dlls are located in the "app" subdirectory of the
executable's path.

Search there.

Fixes: QTBUG-117691
Pick-to: 6.6 6.6.0
Change-Id: I467e90344e0a85384e8e06393fe41a98f1904bfc
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>